--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "joi": "^17.11.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
+    "path": "^0.12.7",
     "prisma": "^5.7.0",
     "ts-node": "^10.9.1",
     "typecript": "^0.0.1-security",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
